# fcitx5-android

./: .gitmodules  README.md  flake.nix  gradle.properties  settings.gradle.kts
.github/workflows/: Manually-build-in-one.yaml  build-librime.yaml  ci.yml  fdroid.yml  publish.yml  pull_request.yml
app/: build.gradle.kts  org.fcitx.fcitx5.android.yml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/androidfrontend/: androidfrontend.cpp  androidfrontend.h  androidfrontend_public.h
app/src/main/java/org/fcitx/fcitx5/android/core/: Fcitx.kt  FcitxAPI.kt
app/src/main/java/org/fcitx/fcitx5/android/data/: InputFeedbacks.kt
app/src/main/java/org/fcitx/fcitx5/android/data/prefs/: AppPrefs.kt  ManagedPreferenceCategory.kt  ManagedPreferenceUi.kt
app/src/main/java/org/fcitx/fcitx5/android/data/theme/: ThemePrefs.kt
app/src/main/java/org/fcitx/fcitx5/android/input/: AutoScaleTextView.kt  CandidatesView.kt  FcitxInputMethodService.kt  InputDeviceManager.kt  InputView.kt  NavigationBarManager.kt
app/src/main/java/org/fcitx/fcitx5/android/input/bar/: KawaiiBarComponent.kt
app/src/main/java/org/fcitx/fcitx5/android/input/bar/ui/idle/: ButtonsBarUi.kt  NumberRow.kt
app/src/main/java/org/fcitx/fcitx5/android/input/candidates/floating/: PagedCandidatesUi.kt  PaginationUi.kt
app/src/main/java/org/fcitx/fcitx5/android/input/floating/: FloatingKeyboardController.kt
app/src/main/java/org/fcitx/fcitx5/android/input/keyboard/: BaseKeyboard.kt  BaseKeyboardFlex.kt  CommonKeyActionListener.kt  KeyDef.kt  KeyDefPreset.kt  KeyView.kt  KeyboardLayout.kt  KeyboardWindow.kt  NumberKeyboard.kt  SpaceLongPressBehavior.kt  TextKeyboard.kt
app/src/main/java/org/fcitx/fcitx5/android/input/picker/: PickerData.kt  PickerLayout.kt  PickerPageUi.kt
app/src/main/java/org/fcitx/fcitx5/android/input/preedit/: PreeditUi.kt
app/src/main/java/org/fcitx/fcitx5/android/input/voice/: WaveformView.kt
app/src/main/java/org/fcitx/fcitx5/android/link/: AsrkbSpeechClient.kt  VoiceOverlayUiBridge.kt
app/src/main/java/org/fcitx/fcitx5/android/ui/main/settings/theme/: KeyboardPreviewUi.kt
app/src/main/play/listings/ru/: full-description.txt
app/src/main/res/values/: keyboard_26_ids.xml  strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
lib/fcitx5/src/main/cpp/: CMakeLists.txt
lib/fcitx5/src/main/cpp/cmake/: Fcitx5UtilsConfigVersion.cmake
lib/rime/: build.gradle.kts
plugin/chewing/licenses/libraries/: fcitx5-chewing.json
plugin/hangul/src/main/cpp/: CMakeLists.txt
plugin/rime/: build.gradle.kts
plugin/rime/src/main/cpp/: CMakeLists.txt  wrapper.cc
